Bug 747492 - Don't show vkb when plugin is focused on Android r=cpeterson